crates/fortitude/tests/snapshots/check__output_format_count.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - count
    - "--select"
    - "S061,C001,PORT011,PORT021"
    - test.f90
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
test.f90:4

----- stderr -----
