crates/fortitude/tests/snapshots/check__output_format_full.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - full
    - "--select"
    - "S061,C001,PORT011,PORT021"
    - test.f90
---
success: false
exit_code: 1
----- stdout -----
C001 program uses implicit typing
 --> test.f90:1:1
  |
1 | program test
  | ^^^^^^^^^^^^
2 |   logical*4, parameter :: true = .true.
3 | end program
  |
help: Insert `implicit none`

PORT021 'logical*4' uses non-standard syntax
 --> test.f90:2:10
  |
1 | program test
2 |   logical*4, parameter :: true = .true.
  |          ^^
3 | end program
  |
help: Replace with 'logical(4)'

PORT011 logical kind set with number literal '4'
 --> test.f90:2:11
  |
1 | program test
2 |   logical*4, parameter :: true = .true.
  |           ^
3 | end program
  |
help: Use the parameter 'int32' from 'iso_fortran_env'

S061 [*] end statement should be named.
 --> test.f90:3:1
  |
1 | program test
2 |   logical*4, parameter :: true = .true.
3 | end program
  | ^^^^^^^^^^^
help: Write as 'end program test'.

fortitude: 1 files scanned.
Number of diagnostics: 4

For more information about specific rules, run:

    fortitude explain X001,Y002,...

[*] 1 fixable with the `--fix` option (2 hidden fixes can be enabled with the `--unsafe-fixes` option).

----- stderr -----
