crates/fortitude/tests/snapshots/check__output_format_json-lines.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - json-lines
    - "--select"
    - "S061,C001,PORT011,PORT021"
    - test.f90
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
{"code":"C001","name":"implicit-typing","severity":"error","end_location":{"column":1,"row":2},"filename":"[TMP]/test.f90","fix":{"applicability":"unsafe","edits":[{"content":"  implicit none\n","end_location":{"column":1,"row":2},"location":{"column":1,"row":2}}],"message":"Insert `implicit none`"},"location":{"column":1,"row":1},"message":"program uses implicit typing","url":"https://fortitude.readthedocs.io//en/stable/rules/implicit-typing"}
{"code":"PORT021","name":"star-kind","severity":"error","end_location":{"column":12,"row":2},"filename":"[TMP]/test.f90","fix":{"applicability":"unsafe","edits":[{"content":"logical(4)","end_location":{"column":12,"row":2},"location":{"column":3,"row":2}}],"message":"Replace with 'logical(4)'"},"location":{"column":10,"row":2},"message":"'logical*4' uses non-standard syntax","url":"https://fortitude.readthedocs.io//en/stable/rules/star-kind"}
{"code":"PORT011","name":"literal-kind","severity":"error","end_location":{"column":12,"row":2},"filename":"[TMP]/test.f90","fix":null,"location":{"column":11,"row":2},"message":"logical kind set with number literal '4'","url":"https://fortitude.readthedocs.io//en/stable/rules/literal-kind"}
{"code":"S061","name":"unnamed-end-statement","severity":"error","end_location":{"column":12,"row":3},"filename":"[TMP]/test.f90","fix":{"applicability":"safe","edits":[{"content":"end program test","end_location":{"column":12,"row":3},"location":{"column":1,"row":3}}],"message":"Write as 'end program test'."},"location":{"column":1,"row":3},"message":"end statement should be named.","url":"https://fortitude.readthedocs.io//en/stable/rules/unnamed-end-statement"}

----- stderr -----
